- Any degraded armor on the sheet of a character that is using settings that do not have armor degradation enabled is now ignored.
- Unequipped weapon accessories can no longer alter the reach of weapons.
- The ammo-unloaded versions of the damage, ranges, dice pool, accuracy, AP, RC, and firing modes of weapons is now printed and exported alongside the ammo-loaded versions.

Data Changes:
- Added Quick-Start Rules content: 15 scrumptious menu items brought to you by McHughes™!
- Added bonus nodes for Shooter (The Soldier) paragon's Compiling dice pool penalty and +1 limit for attack actions. Fixes #4935.
- Corrected the Cybercombat dice bonus of Intrusion Countermeasure (The Guardian) to be conditional because it is not granted against IC.
- Added bonus nodes for Architect (The Builder) and Archivist (The Secret Keeper) paragons' dice bonuses for the Edit File and Matrix Search Computer actions respectively.
- Modified Cyberlimb Optimization so that if the selected skill for it is a skill that can be used with weapons, the +1 limit modifier will show up as part of those weapons' accuracy. Existing characters with this 'ware will need to either re-buy it or reapply improvements to see the effects. Part of #4841.
- Astral Chameleon can now properly only be taken by Awakened characters. Existing characters with this quality will need to re-add the quality or reapply improvements to see this effect.
- Technomancers now have their inherent +2 to Matrix Perception reflected in the program. Existing technomancers will need to reapply improvements to see this bonus.
- City Slicker, Outdoorsman, Dimmer Bulb, Reduced Sense, Vomeronasal Organ, Critter Spook, Cyclopean Eye, Malware Infection, Curiosity Killed the Cat, Sprite Combustion, and Hi-Rez now all have their dice pool effects reflected in the program. Existing characters with these qualities will need to re-add the quality or reapply improvements to see these bonuses.